Apply Spotless code formatting