@@ -1,12 +1,12 @@
 package furnidata.details;
 
-import org.json.JSONObject;
-
 import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.json.JSONObject;
 
-// source: https://github.com/kouris-h/HabboAPI/blob/master/src/main/java/gamedata/furnidata/furnidetails/FurniDetails.java
+// source:
+// https://github.com/kouris-h/HabboAPI/blob/master/src/main/java/gamedata/furnidata/furnidetails/FurniDetails.java
 // by wiredspast & kouris
 public class FloorItemDetails extends FurniDetails {
     public final String customParams;
@@ -29,16 +29,16 @@ public class FloorItemDetails extends FurniDetails {
         this.canSitOn = jsonObject.getBoolean("cansiton");
         this.canLayOn = jsonObject.getBoolean("canlayon");
 
-        this.partColors = jsonObject.has("partcolors") ?
-                Collections.unmodifiableList(
-                        jsonObject
-                            .getJSONObject("partcolors")
-                            .getJSONArray("color")
-                            .toList()
-                            .stream()
-                            .map(o -> (String) o)
-                            .collect(Collectors.toList())
-                ) : null;
+        this.partColors =
+                jsonObject.has("partcolors")
+                        ? Collections.unmodifiableList(
+                                jsonObject
+                                        .getJSONObject("partcolors")
+                                        .getJSONArray("color")
+                                        .toList()
+                                        .stream()
+                                        .map(o -> (String) o)
+                                        .collect(Collectors.toList()))
+                        : null;
     }
-
 }
